@@ -2,6 +2,9 @@
 ''
  * Using CLAM 1.0.1
  * Dropped all the obsolete FLTK code
+ * Adopted needed files from the deprecated vmqt CLAM module
+ * File menu items redistributed on others
+ * Removed Licence menu item
 
 2007-03-20 SMSTools 0.4.7
 'The Berlin release'
